tests/codegen/fail/object/attr_fields_duplicate.stderr
error: GraphQL object must have a different name for each field
       · note: https://spec.graphql.org/October2021#sec-Objects

 --> fail/object/attr_fields_duplicate.rs:6:6
  |
6 | impl ObjA {
  |      ^^^^

error: cannot find attribute `graphql` in this scope
  --> fail/object/attr_fields_duplicate.rs:11:7
   |
11 |     #[graphql(name = "id")]
   |       ^^^^^^^
   |
   = note: `graphql` is an attribute that can be used by the derive macros `GraphQLEnum`, `GraphQLInputObject`, `GraphQLInterface`, `GraphQLObject`, `GraphQLScalar` and `GraphQLUnion`, you might be missing a `derive` attribute
